# satellite-object-detection-yolov8-vhr10-finetune

./: .gitignore  DEPLOY_INSTRUCTIONS.md  README.md  README_REPLICATE.md  analyze_results.py  class_wise_accuracy_analysis.py  cog.yaml  comprehensive_evaluation_report.py  deploy_to_replicate.sh  detailed_image_analysis.py  predict.py  pyproject.toml  requirements.txt  run_data_prep.py  run_evaluation.py  test_replicate_local.py  train_yolo.py  upload_direct.py  upload_to_huggingface.py
src/yolov8_finetune/: __init__.py  data_prep.py  evaluate.py  main.py  train.py
